[package]
name = "pwiz-web"
version = "0.1.0"
edition = "2021"

[dependencies]

dotenvy = "0.15.7"
once_cell = "1.20.3"
polodb_core = "5.1.3"
rocket = "0.5.1"
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0.217" }
tera = { version = "1.20.0", default-features = true }
whoami = "1.5.2"
